--- a/index.html
+++ b/index.html
@@ -11,8 +11,20 @@
 <body>
     <h1>
         <strong>Giovai Alves Pereira</strong>
-    </h1>
-    <img src="" alt="">
+    </h1 id="inicio">
+    <img src="./imagens/GiovaniPereira.jpeg" alt="Foto Giovani" width="200px">
+
+    <h3>Curitibano, ainda morando em Curitiba, nascido no dia 12 de setembro de 1986 (praticamente ontem) formado em Engenharia Civil desde 2015, mas procura mudar pra área de tecnologia, pois encontrou na tecnologia a profissão que quer exercer.</h3>
+
+    <h3>
+    <ul>
+        <li>Resiliente;</li>
+        <li>Esforçado;</li>
+        <li>Ouve o outro lado.</li>
+    </ul>
+    </h3>
+
+    <a href="#inicio">Início</a>
 </body>
 
 </html>
