Atualização do HTML

--- a/index.html
+++ b/index.html
@@ -14,17 +14,24 @@
     </h1 id="inicio">
     <img src="./imagens/GiovaniPereira.jpeg" alt="Foto Giovani" width="200px">
 
-    <h3>Curitibano, ainda morando em Curitiba, nascido no dia 12 de setembro de 1986 (praticamente ontem) formado em Engenharia Civil desde 2015, mas procura mudar pra área de tecnologia, pois encontrou na tecnologia a profissão que quer exercer.</h3>
-
     <h3>
-    <ul>
-        <li>Resiliente;</li>
-        <li>Esforçado;</li>
-        <li>Ouve o outro lado.</li>
-    </ul>
+        Curitibano, ainda morando em Curitiba, nascido no dia 12 de setembro de 1986 (praticamente ontem) formado em Engenharia Civil desde 2015, mas procura mudar pra área de tecnologia, pois encontrou na tecnologia a profissão que quer exercer.
     </h3>
 
-    <a href="#inicio">Início</a>
+    <h2 id="habilidades">
+        Habilidades:
+    <h3>
+    <ul>
+        <li>Projetista em Engenharia Civil;</li>
+        <li>Conhecimento básico em Python e C;</li>
+        <li>Inglês Intermediário/Avançado.</li>
+    </ul>
+    </h3>
+    </h2>
+
+    <a href="#inicio">Início</a> <br>
+    <a href="#habilidades">Habilidades</a> <br>
+    <a href="https://github.com/GiovaniAP-VANOengenharia" target="blank">Meu GitHub</a>
 </body>
 
 </html>
